--- a/client/src/base/Footer.css
+++ b/client/src/base/Footer.css
@@ -3,11 +3,18 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: ;
+
+    /*color: ;*/
+}
+
+#skeeelled-logo-1 {
+    pointer-events: visible;
 }
 
  #skeeelled-logo {
     /*  logoSkeeelledFooter.svg {height/width}  */
+     padding-right:10px;
+     margin:0px;
 }
 
  #weee-open-logo {
