Code cleaned a bit

--- a/client/src/pages/Exam.css
+++ b/client/src/pages/Exam.css
@@ -4,7 +4,16 @@
   padding: 10px;
   border-radius: 10px;
 
-  p {
-    margin: 0;
-  }
+}
+
+p {
+  margin: 0;
+}
+
+.header {
+  padding-bottom: 40px;
+}
+
+.pagination {
+  justify-content: center;
 }
