--- a/client/src/base/Footer.css
+++ b/client/src/base/Footer.css
@@ -1,17 +1,24 @@
 .footer {
-    text-align:center
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .logoSkeeelled {
-    height:35px
+    height:40px;
+    margin-right:5px;
+    margin-bottom:6px;
 }
 
 .logoWeeeOpen {
     height:20px;
-    margin-left:10px
+    margin-left:8px;
+    margin-top:4px;
 }
 
 .logoSkeeell {
-    height:90px;
-    vertical-align:-26.5pt
+    height:42px;
+    vertical-align:-9.5pt;
+    margin-left:-7px;
 }
