--- a/client/src/base/textInput/textInput.css
+++ b/client/src/base/textInput/textInput.css
@@ -2,3 +2,8 @@
   padding-top: 0 !important;
   padding-bottom: 0 !important;
 }
+
+ul.contains-task-list {
+  list-style-type: none;
+  padding-left: 0 !important;
+}
