--- a/client/src/base/ListGroup.css
+++ b/client/src/base/ListGroup.css
@@ -2,3 +2,12 @@
   margin: 0 auto;
   padding: 0;
 }
+
+.list-attributes {
+  cursor: pointer;
+  text-decoration: none;
+  color: black;
+}
+a:hover{
+  color: inherit;
+}
