--- a/client/src/base/Footer.css
+++ b/client/src/base/Footer.css
@@ -1,32 +1,32 @@
-.footer {
+#footer {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.logoSkeeelled {
+#logoSkeeelled {
     height:40px;
     margin-right:5px;
     margin-bottom:6px;
 }
 
-.logoWeeeOpen {
+#logoWeeeOpen {
     height:20px;
     margin-left:8px;
     margin-top:4px;
 }
 
-.logoSkeeell {
+#logoSkeeell {
     height:42px;
     vertical-align:-9.5pt;
     margin-left:-7px;
 }
 
- #weee-open-logo {
-     height: 20px;
-     vertical-align: -5pt;
-     padding-left: 10pt;
+#weee-open-logo {
+    height: 20px;
+    vertical-align: -5pt;
+    padding-left: 10pt;
 }
 
 #skeeelled {
@@ -35,13 +35,13 @@
     align-items: flex-end;
 }
 
- #skeeell {
-     display: flex;
-     flex-direction: row;
-     align-items: flex-end;
+#skeeell {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
  }
 
  #skeeell-logo {
-     height: 50px;
-     margin-left: -10pt;
+    height: 50px;
+    margin-left: -10pt;
 }
