--- a/client/src/base/NavigationBar.css
+++ b/client/src/base/NavigationBar.css
@@ -16,16 +16,6 @@
   position: relative;
 }
 
-.navLink {
-  color: #41413f;
-  text-decoration: none;
-}
-
-.navLink:hover {
-  color: #00983a;
-  text-decoration: none;
-}
-
 #navbar-logo-skeeelled {
   padding: auto;
   margin: auto;
@@ -35,12 +25,22 @@
 }
 
 #course-link {
+  color: #41413f;
   font-size: 20px;
+}
+
+#course-link:hover {
+  color: #00983a;
 }
 
 #add-question-link {
   margin-left: auto;
+  color: #41413f;
   font-size: 20px;
+}
+
+#add-question-link:hover {
+  color: #00983a;
 }
 
 #logout-icon {
