--- a/client/src/base/NavigationBar.css
+++ b/client/src/base/NavigationBar.css
@@ -29,7 +29,12 @@
   font-size: 20px;
 }
 
-#course-link:hover {
+#course-link-dark {
+  color: white;
+  font-size: 20px;
+}
+
+#course-link:hover, #course-link-dark:hover {
   color: #00983a;
 }
 
@@ -39,7 +44,13 @@
   font-size: 20px;
 }
 
-#add-question-link:hover {
+#add-question-link-dark {
+  margin-left: auto;
+  color: white;
+  font-size: 20px;
+}
+
+#add-question-link:hover, #add-question-link-dark:hover {
   color: #00983a;
 }
 
@@ -49,4 +60,12 @@
 
 #user-dropdown {
   padding-right: 5%;
+}
+
+.dropdown-link {
+  text-decoration: none;
+}
+
+.dropdown-item {
+  padding: 4px 16px 4px 16px;
 }
