--- a/client/src/pages/Simulation.css
+++ b/client/src/pages/Simulation.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Nunito&family=Rubik:wght@700&display=swap');.outline-secondary {
+@import url('https://fonts.googleapis.com/css2?family=Nunito&family=Quicksand&display=swap');
+
+.outline-secondary {
   font-size: 20px;
 }
 .pagination-finish {
@@ -10,13 +12,13 @@
 
 .simulation-container .simulation-title {
   font-family: 'Nunito', sans-serif;
-  font-weight: 700; /*Nunito Bold*/
+  font-weight: bold;
   font-size: 41px; /*change from pt to px*/
 }
 
 .simulation-container .simulation-duration {
   font-family: 'Nunito', sans-serif;
-  font-weight: 700; /*Nunito Bold*/
+  font-weight: bold;
   font-size: 35px; /*change from pt to px*/
   color: #9F9F9F;
 }
@@ -34,7 +36,7 @@ div.pagination-finish.row > div:nth-child(1) > ul {
   color: white;
 }
 .simulation-container .page-link:hover {
-  font-weight: 700; /*Nunito Bold*/
+  font-weight: bold;
   border-color: #EA9B57 ;
   background-color: #EA9B57 ;
   color: white;
@@ -50,26 +52,27 @@ div.pagination-finish.row > div:nth-child(1) > ul {
   border: none;
 }
 .simulation-question-text-card {
+  font-size: 20px; /*change from pt to px*/
+  font-family:  'Nunito', sans-serif;
   color: black;
   padding: 10pt;
   border-radius: 16pt;
   border-color: #F9F9F9;
   background-color: #F9F9F9;
 }
-.simulation-question-answer-ratio-card {
-  padding: 10pt;
-  border-radius: 20px;
+.simulation-question-title-number{
+  font-weight: bold;
+  font-size: 25px;
 }
-.simulation-question-answer {
-  border-radius: 20px;
-  padding: 0;
-}
-
-
 
 
 .simulation-container .btn-outline-success {
-  border-color: #EA9B57 ;
+  font-size: 17px; /*change from pt to px*/
+  width: 139px;
+  height: 40px;
+  border-width: 2pt;
+  border-radius: 7pt;
+  border-color: #EA9B57;
   color: black ;
   background-color: white ;
 }
@@ -80,28 +83,41 @@ div.pagination-finish.row > div:nth-child(1) > ul {
 }
 
 .simulation-modal .btn-outline-success {
-  border-color: #E08330 ;
+  font-size: 17px; /*change from pt to px*/
+  width: 139px;
+  height: 40px;
+  border-radius: 7pt;
+  border-color: #EA9B57;
+  border-width: 2pt;
   color: black ;
   background-color: white ;
 }
 .simulation-modal .btn-outline-success:hover {
-  border-color: #E08330 ;
-  background-color: #E08330 ;
+  border-radius: 7pt;
+  border-color: #EA9B57 ;
+  background-color: #EA9B57 ;
   color: white;
 }
 
+.simulation-question-answer-ratio-card {
+  padding: 20pt;
+  border-radius: 20px;
+  font-family:  'Nunito', sans-serif;
+  font-size: 22px; /*change from pt to px*/
+}
+.simulation-question-answer {
+  padding: 0;
+}
+
 .simulation-answer-checkbox .form-check-input  {
+  height: 13px; /*change from pt to px*/
+  width:13px; /*change from pt to px*/
   border-radius: 50px;
-  border-color: #E08330;
+  border-color: #EA9B57;
+  border-width: 1pt;
 }
 
 .simulation-answer-checkbox .form-check-input:checked {
-  background-color: #E08330;
+  background-color: #EA9B57;
+  border-width: 1pt;
 }
-
-
-
-
-/*
-  #EDC295 (BUTTON), #E08330 (PAGINATION)
-*/
