--- a/client/src/pages/stylesheet/Simulation.scss
+++ b/client/src/pages/stylesheet/Simulation.scss
@@ -53,9 +53,6 @@ div.pagination-finish.row > div:nth-child(1) > ul {
   color: white;
 }
 
-.simulation-question-card {
-  border: none;
-}
 .simulation-question-text-card {
   @include font-Nunito($size: 20px);
   color: black;
@@ -87,7 +84,7 @@ div.pagination-finish.row > div:nth-child(1) > ul {
 
 }
 .simulation-modal .btn-outline-success:hover {
-  @include button-color-radius($background-color: #EA9B57)
+  @include button-color-radius($background-color: #EA9B57, $border-color:#EA9B57, $color: white);
 }
 
 .simulation-question-answer-ratio-card {
