--- a/client/src/pages/stylesheet/StyleBase.scss
+++ b/client/src/pages/stylesheet/StyleBase.scss
@@ -21,3 +21,15 @@
   border-radius: $border-radius;
   border-width: $border-width;
 }
+
+@mixin button-dimensions($w: 140px, $h: 40px) {
+  height: $h;
+  width: $w;
+}
+
+@mixin header-component($border-width:3pt,$border-color:#797979, $height: 80px, $border-radius:16pt) {
+  border-width: $border-width;
+  border-color: $border-color;
+  border-radius: $border-radius ;
+  height: 80px;
+}
