table header scss

--- a/client/src/base/stylesheet/StyleBase.scss
+++ b/client/src/base/stylesheet/StyleBase.scss
@@ -33,3 +33,7 @@
   border-radius: $border-radius;
   height: $height;
 }
+
+//@mixin table-list-title ($name, $border-color: black) {
+//  border-color: $border-color;
+//}
