--- a/client/src/base/stylesheet/List.css
+++ b/client/src/base/stylesheet/List.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito&family=Quicksand&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Nunito&family=Quicksand&display=swap");
 .list {
   margin-top: 20px;
   margin-bottom: 20px;
@@ -9,7 +8,11 @@
   padding: 12px;
   background-color: white;
   color: black;
-  border-width: 3px;
+  font-weight: bold;
+  border-width: 3pt;
+  border-color: #797979;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
 }
 
 .listQuestionsTitle {
@@ -32,14 +35,14 @@
   border-top-right-radius: 10px;
   font-family: "Quicksand", sans-serif;
   font-weight: bold;
-  font-size: 25; /*change from pt to px*/
+  font-size: 25px; /*change from pt to px*/
 }
 
 .roundedList td {
   padding: 0.5rem;
   font-family: "Nunito", sans-serif;
   font-weight: 400;
-  font-size: 21; /*change from pt to px*/
+  font-size: 21px; /*change from pt to px*/
 }
 
 .roundedList tr:nth-child(odd) {
