--- a/client/src/base/stylesheet/List.scss
+++ b/client/src/base/stylesheet/List.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&family=Quicksand&display=swap');
 @import "StyleBase.scss";
 
 
@@ -11,7 +10,8 @@
   padding: 12px;
   background-color: white;
   color: black;
-  border-width: 3px;
+  font-weight: bold;
+  @include header-component();
 }
 
 .listQuestionsTitle {
@@ -32,12 +32,13 @@
 .roundedList th {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  @include font-Quicksand($size:25, $weight:bold);
+  @include font-Quicksand($size:25px, $weight:bold);
 }
+
 
 .roundedList td {
   padding: 0.5rem;
-  @include font-Nunito($size: 21);
+  @include font-Nunito($size: 21px);
 }
 
 .roundedList tr:nth-child(odd) {
