--- a/client/src/pages/stylesheet/StyleBase.scss
+++ b/client/src/pages/stylesheet/StyleBase.scss
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito&family=Quicksand&display=swap');
 
-
 // font-stack: Nunito, default size: 20px, regular 400
 @mixin font-Nunito($size: 20px, $weight: 400) {
   font-family: 'Nunito', sans-serif;
@@ -32,4 +31,12 @@
   border-color: $border-color;
   border-radius: $border-radius;
   height: $height;
+}
+
+@mixin table-dot-margin-color($color: black) {
+  color: $color;
+  height: 8px;
+  width: 8px;
+  margin-left: 2px;
+  margin-right: 8px;
 }
