--- a/client/src/pages/stylesheet/SimulationResult.scss
+++ b/client/src/pages/stylesheet/SimulationResult.scss
@@ -50,11 +50,14 @@
 .simulation-result-container table{
   color:#797979;
   background-color: rgba(121, 121, 121, 0.05);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  @include font-Nunito($size:25px, $weight:400);
 }
 
 .simulation-result-container table > thead {
   vertical-align: middle;
   @include header-component($height:75px);
+  @include font-Quicksand($size:25px, $weight:400);
 }
 
-//.simulation-result-table
