courses/ course design implementation

--- a/client/src/base/stylesheet/StyleBase.scss
+++ b/client/src/base/stylesheet/StyleBase.scss
@@ -34,3 +34,8 @@
   border-top-right-radius: $border-radius;
 }
 
+@mixin suggestion-card {
+  border-radius: 16px;
+  height: 357px;
+  width:335px ;
+}
