--- a/client/src/pages/stylesheet/SimulationResult.scss
+++ b/client/src/pages/stylesheet/SimulationResult.scss
@@ -52,23 +52,62 @@
   color:#797979;
   background-color: rgba(121, 121, 121, 0.05);
   @include font-Nunito($size:25px, $weight:400);
-  border: 1px solid black;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  //border: 1px solid black;
+  //border-top-left-radius: 10px;
+  //border-top-right-radius: 10px;
+  overflow: hidden;
   border-collapse: separate;
 }
+
 .simulation-result-container table thead {
   @include font-Quicksand($size:25px, $weight:400);
-  border: 1px solid black;
+  //border: 1px solid black;
+  //border-top-left-radius: 16pt;
+  //border-top-left-radius: 16pt;
+  //border-top-left-radius: 16pt;
+  //border-top-right-radius: 16pt;
+  //border: 2px solid #1d2124;
+}
+
+.simulation-result-container table thead tr {
+  //border-collapse: collapse
+  //border-top-left-radius: 16pt;
+  //border-top-right-radius: 16pt;
+  //border: 2px solid #1d2124;
+}
+.simulation-result-container table thead th {
+  //border-collapse: collapse;
+  //border-top-left-radius: 16pt;
+  //border-top-right-radius: 16pt;
+  //border: 2px solid #1d2124;
+  padding: 1rem;
 }
 
 .simulation-result-container table th:first-child {
-  border-left: none;
-}
-.simulation-result-container table th:last-child {
-  border-right: none;
+  border-collapse: collapse;
+  border-top-left-radius: 16pt;
+  border: 3px solid #797979;
 }
 
-.simulation-result-container table tbody td:first-child{
-  border-top: none;
+.simulation-result-container table th:nth-child(2),.simulation-result-container table th:nth-child(3) {
+  border: 3px solid #797979;
+}
+
+.simulation-result-container table th:last-child {
+  border-collapse: collapse;
+  border-top-right-radius: 16pt;
+  border: 3px solid #797979;
+}
+
+//.simulation-result-container table tbody td:first-child{
+//  border-top: none;
+//}
+
+.simulation-result-container table tbody td {
+  border-left: 0.1px solid #797979;
+  @include font-Nunito($size:25px, $weight:400);
+}
+
+.simulation-result-container table tbody td:first-child {
+  border: none;
 }
