--- a/client/src/base/stylesheet/List.css
+++ b/client/src/base/stylesheet/List.css
@@ -88,4 +88,29 @@
   margin-top: -2px;
 }
 
+.accordion {
+  border-collapse: separate;
+  border-radius: 16pt;
+  box-sizing: border-box;
+}
+
+.list-simulation-result .listSimulationResultTitle {
+  font-family: "Nunito", sans-serif;
+  font-weight: bold;
+  font-size: 41px; /*change from pt to px*/
+}
+
+.accordion-item .accordion-header {
+  border: 3px solid #797979;
+}
+
+.accordion-item .accordion-collapse {
+  margin: 0;
+}
+
+.accordion-item .accordion-body {
+  border-right: 0.1px solid #797979;
+  border-left: 0.1px solid #797979;
+}
+
 /*# sourceMappingURL=List.css.map */
