--- a/client/src/pages/stylesheet/SimulationResult.css
+++ b/client/src/pages/stylesheet/SimulationResult.css
@@ -72,34 +72,28 @@
   font-family: "Nunito", sans-serif;
   font-weight: 400;
   font-size: 25px; /*change from pt to px*/
-  overflow: hidden;
-  border-collapse: separate;
+  border-collapse: collapse;
 }
 
 .simulation-result-container table thead {
   font-family: "Quicksand", sans-serif;
   font-weight: 400;
   font-size: 25px; /*change from pt to px*/
+  outline: 3px solid #797979;
+  border-top-left-radius: 16pt;
+  border-top-right-radius: 16pt;
 }
 
 .simulation-result-container table thead th {
   padding: 1rem;
 }
 
-.simulation-result-container table th:first-child {
-  border-collapse: collapse;
-  border-top-left-radius: 16pt;
-  border: 3px solid #797979;
-}
-
-.simulation-result-container table th:nth-child(2), .simulation-result-container table th:nth-child(3) {
-  border: 3px solid #797979;
+.simulation-result-container table th:nth-child(2), .simulation-result-container table th:nth-child(3), .simulation-result-container table th:last-child {
+  border-left: 3px solid #797979;
 }
 
 .simulation-result-container table th:last-child {
-  border-collapse: collapse;
-  border-top-right-radius: 16pt;
-  border: 3px solid #797979;
+  border-left: 3px solid #797979;
 }
 
 .simulation-result-container table tbody td {
