--- a/client/src/pages/stylesheet/StyleBase.scss
+++ b/client/src/pages/stylesheet/StyleBase.scss
@@ -36,7 +36,7 @@
   $border-width: 3pt,
   $border-color: #797979,
   $height: 80px,
-  $border-radius: 16pt
+  $border-radius: 16px
 ) {
   border-width: $border-width;
   border-color: $border-color;
