--- a/client/src/pages/stylesheet/Profile.css
+++ b/client/src/pages/stylesheet/Profile.css
@@ -49,12 +49,12 @@ h4 {
 }
 
 .user-profile .default-table-my-answers .listTitle {
-  border-color: #ebace7;
-  color: #ebace7;
+  border-color: #f40883;
+  color: #f40883;
 }
 
 .user-profile .default-table-my-answers .list-body > tr > td > .table-dot {
-  color: #ebace7;
+  color: #f40883;
   height: 8px;
   width: 8px;
   margin-left: 2px;
