--- a/client/src/pages/stylesheet/SimulationResult.css
+++ b/client/src/pages/stylesheet/SimulationResult.css
@@ -80,8 +80,8 @@
   font-weight: 400;
   font-size: 25px; /*change from pt to px*/
   outline: 3px solid #797979;
-  border-top-left-radius: 16pt;
-  border-top-right-radius: 16pt;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
 }
 
 .simulation-result-container table thead th {
