--- a/client/src/base/stylesheet/List.css
+++ b/client/src/base/stylesheet/List.css
@@ -69,6 +69,13 @@
   padding: 5px;
 }
 
+.container .list-simulation-result {
+  font-family: "Nunito", sans-serif;
+  font-weight: light;
+  font-size: 17px; /*change from pt to px*/
+  margin-top: 5%;
+}
+
 .list-simulation-result .btn-outline-success-simulation-result {
   height: 30px;
   min-width: 60px;
@@ -76,6 +83,7 @@
   border-color: #e08330;
   color: black;
   background-color: white;
+  margin: auto;
 }
 
 .list-simulation-result .btn-outline-success-simulation-result:hover {
@@ -101,7 +109,12 @@
 }
 
 .accordion-item .accordion-header {
-  border: 3px solid #797979;
+  font-family: "Nunito", sans-serif;
+  font-weight: bold;
+  font-size: 41px; /*change from pt to px*/
+  border-left: 3px solid #797979;
+  border-right: 3px solid #797979;
+  border-bottom: 3px solid #797979;
 }
 
 .accordion-item .accordion-collapse {
@@ -111,6 +124,35 @@
 .accordion-item .accordion-body {
   border-right: 0.1px solid #797979;
   border-left: 0.1px solid #797979;
+  border-bottom: 1px solid #797979;
+}
+
+.list-simulation-result .accordion-header-card {
+  font-family: "Nunito", sans-serif;
+  font-weight: bold;
+  font-size: 41px; /*change from pt to px*/
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+  border: 3px solid #797979;
+}
+
+.list-simulation-result .accordion-header-card .card-header {
+  font-family: "Nunito", sans-serif;
+  font-weight: bold;
+  font-size: 41px; /*change from pt to px*/
+  padding: 3vh 1.25rem 0.5rem 1.25rem;
+}
+
+.list-simulation-result .accordion-footer-card {
+  font-family: "Nunito", sans-serif;
+  font-weight: bold;
+  font-size: 41px; /*change from pt to px*/
+  padding: 5vh;
+  border-bottom-left-radius: 16px;
+  border-bottom-right-radius: 16px;
+  border-left: 3px solid #797979;
+  border-right: 3px solid #797979;
+  border-bottom: 3px solid #797979;
 }
 
 /*# sourceMappingURL=List.css.map */
