--- a/client/src/base/stylesheet/List.scss
+++ b/client/src/base/stylesheet/List.scss
@@ -129,6 +129,11 @@
   padding: 3vh 1.25rem 0.5rem 1.25rem;
 }
 
+.accordion-button:not(.collapsed) {
+  color: #E28111;
+  border: 3px solid #E28111;
+}
+
 .list-simulation-result .accordion-footer-card {
   @include font-Nunito($size: 41px, $weight: bold);
   padding: 5vh;
