Queston.js design update

--- a/client/src/base/stylesheet/List.css
+++ b/client/src/base/stylesheet/List.css
@@ -146,13 +146,14 @@
 .accordion-button:not(.collapsed) {
   color: #E28111;
   border: 3px solid #E28111;
+  outline: none;
 }
 
 .list-simulation-result .accordion-footer-card {
   font-family: "Nunito", sans-serif;
   font-weight: bold;
   font-size: 41px; /*change from pt to px*/
-  padding: 5vh;
+  padding: 1.8rem;
   border-bottom-left-radius: 16px;
   border-bottom-right-radius: 16px;
   border-left: 3px solid #797979;
