QuestionPreview.js answer card design

--- a/client/src/base/stylesheet/StyleBase.scss
+++ b/client/src/base/stylesheet/StyleBase.scss
@@ -17,8 +17,8 @@
   $color: black,
   $background-color: white,
   $border-color: black,
-  $border-radius: 7pt,
-  $border-width: 2pt
+  $border-radius: 7px,
+  $border-width: 2px
 ) {
   color: $color;
   background-color: $background-color;
