discussion TextInput design

--- a/client/src/pages/stylesheet/Replies.css
+++ b/client/src/pages/stylesheet/Replies.css
@@ -35,7 +35,8 @@
   color: black;
   background-color: white;
   border: solid 2px #EBACE7;
-  border-radius: 9px;
+  border-radius: 9pt;
+  height: 100px;
 }
 
 .discussion .questionEntry .reply-title {
