--- a/client/src/pages/stylesheet/Replies.scss
+++ b/client/src/pages/stylesheet/Replies.scss
@@ -29,7 +29,8 @@
   color: black;
   background-color: white;
   border: solid 2px #EBACE7;
-  border-radius:9px;
+  border-radius:9pt;
+  height:100px
 }
 
 .discussion .questionEntry .reply-title {
