--- a/client/src/base/stylesheet/TextInput.scss
+++ b/client/src/base/stylesheet/TextInput.scss
@@ -14,6 +14,7 @@
 .container-fluid .python-editor-container .react-mde .mde-header {
   padding:10px;
   border: none;
+  height:75px;
 }
 .container-fluid .python-editor-container .react-mde .mde-header div {
   border: none;
@@ -25,9 +26,8 @@
   @include button-color-radius( $border-color:#D9D9D9)
 }
 .container-fluid .python-editor-container .react-mde .mde-header .mde-tabs button.selected:hover {
-  color: white;
-  background-color: #EBACE7;
   border-color:  #EBACE7;
+  color:black
 }
 .container-fluid .python-editor-container .react-mde .mde-header .mde-tabs button:hover {
   color: #EBACE7;
